Adapt code style